--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ captures/
 .idea/caches/
 .idea/libraries/
 .idea/inspectionProfiles/
+.idea/codeStyles/
 .idea/modules.xml
 .idea/workspace.xml
 .idea/navEditor.xml
